sandbox/warren/090514/src/json/jx_json_scan.c
/* Generated by re2c 0.12.3 on Sun May 17 11:08:15 2009 */
#line 1 "jx_json_scan.re"
/* RE2C-based tokenizer */

#include <stdio.h>
#include <string.h>

#include "jx_json_private.h"

#define jx_os_read read
#define jx_os_sscanf sscanf
#define jx_os_fprintf fprintf
#define jx_os_strncpy strncpy

typedef jx_uint32 jx_size;
typedef jx_uint32 jx_uword;
typedef jx_int32  jx_word;

#define JX_JSON_SCANNER_MODE_STDIN  0
#define JX_JSON_SCANNER_MODE_STRING 1

typedef struct {
  jx_char *bot, *tok, *ptr, *cur, *pos, *lim, *top, *eof;
  jx_word line;
  jx_int mode; 
  jx_json_parse_context context;
} jx_json_scanner_state;

#ifndef true
#define true 1
#endif

#ifndef false
#define false 0
#endif

#define   BSIZE   8192

#define   YYCTYPE     jx_char
#define   YYCURSOR    cursor
#define   YYLIMIT     s->lim
#define   YYMARKER    s->ptr
#define   YYFILL(n)   {cursor = jx_fill(s, cursor);}

#define   RET(i)   {s->cur = cursor; return i;}

/* parser allocator */
static void *jx__json_alloc(jx_size bytes)
{
  jx_char *ptr = NULL;
  ptr = jx_calloc(1,bytes);
  return (void*)ptr;
}

static void jx__json_free(void *ptr)
{
  if(ptr) 
    jx_free(ptr);
}

static jx_size jx_read_stdin(jx_char *buf, jx_size buf_size)
{
  return fread((char*)buf, 1, buf_size, stdin);
}

static jx_char *jx_fill(jx_json_scanner_state *s, jx_char *cursor)
{
  switch(s->mode) {
  case JX_JSON_SCANNER_MODE_STDIN:
    if(!s->eof) {  
      jx_uword cnt = s->tok - s->bot; /* amount of open space in buffer */
      if(cnt) {
        if(s->lim > s->tok) { /* any remaining characters? */
          memcpy(s->bot, s->tok, s->lim - s->tok); /* move to start of buffer */
        }
        s->tok = s->bot;  /* shift pointers accordingly */
        s->ptr -= cnt; 
        cursor -= cnt;
        s->pos -= cnt;
        s->lim -= cnt;
      }
      if((s->top - s->lim) < BSIZE) { /* open space less than read quantum? */
        /* allocate a larger buffer */
        jx_char *buf = (jx_char*) jx_calloc(1,((s->lim - s->bot) +
                                               BSIZE)*sizeof(jx_char));
        if(buf) { /* and copy contents to new buffer */
          memcpy(buf, s->tok, s->lim - s->tok);
          s->tok = buf; /* adjust pointers accordingly */
          s->ptr = &buf[s->ptr - s->bot];
          cursor = &buf[cursor - s->bot];
          s->pos = &buf[s->pos - s->bot];
          s->lim = &buf[s->lim - s->bot];
          s->top = &s->lim[BSIZE];
          if(s->bot) { /* free old buffer (if exists) */
            jx_free(s->bot);
          }
          s->bot = buf; /* use the new buffer from now on */
        }
      }
      if((s->top - s->lim) < BSIZE) {
        /* unhandled error condition */
      } else {
        cnt = jx_read_stdin(s->lim, BSIZE);
        if(cnt != BSIZE) {
          jx_size cc = cnt;
          while(cc<BSIZE) {
            s->lim[cc] = 0;
            cc++;
          }
          s->eof = &s->lim[cnt]; 
          if(cnt) { 
            *(s->eof)++ = '\n';
          } else {
            *(s->eof)++ = 0;
          }
        }
        s->lim += cnt;
      }
    }
    break;
  }
  return cursor;
}
  
static int jx_scan(jx_json_scanner_state *s)
{
  jx_char *cursor = s->cur;
 std:
  s->tok = cursor;
  
  
#line 133 "<stdout>"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	if((YYLIMIT - YYCURSOR) < 6) YYFILL(6);
	yych = *YYCURSOR;
	switch(yych) {
	case 0x00:	goto yy29;
	case 0x09:
	case 0x0B:
	case 0x0C:
	case ' ':	goto yy27;
	case 0x0A:	goto yy33;
	case '"':	goto yy8;
	case '#':	goto yy31;
	case '\'':	goto yy9;
	case '+':
	case '-':	goto yy2;
	case ',':	goto yy18;
	case '.':	goto yy7;
	case '0':	goto yy4;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy6;
	case ':':	goto yy20;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy26;
	case '[':	goto yy10;
	case ']':	goto yy12;
	case 'f':	goto yy24;
	case 'n':	goto yy25;
	case 't':	goto yy22;
	case '{':	goto yy14;
	case '}':	goto yy16;
	default:	goto yy35;
	}
yy2:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch(yych) {
	case '.':	goto yy110;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy84;
	default:	goto yy3;
	}
yy3:
#line 179 "jx_json_scan.re"
	{
#ifdef JX_JSON_PARSER_DEBUG
      printf("unexpected character: %c\n", *s->tok);
#endif
       RET(JX_JSON_ERROR);
    }
#line 249 "<stdout>"
yy4:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch(yych) {
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy82;
	case 'X':
	case 'x':	goto yy103;
	default:	goto yy102;
	}
yy5:
#line 163 "jx_json_scan.re"
	{ RET(JX_JSON_ICON); }
#line 265 "<stdout>"
yy6:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	goto yy85;
yy7:
	yych = *++YYCURSOR;
	switch(yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy74;
	default:	goto yy3;
	}
yy8:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch(yych) {
	case 0x00:
	case 0x0A:	goto yy3;
	default:	goto yy65;
	}
yy9:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch(yych) {
	case 0x00:
	case 0x0A:	goto yy3;
	default:	goto yy54;
	}
yy10:
	++YYCURSOR;
#line 149 "jx_json_scan.re"
	{ RET(JX_JSON_OPEN_RECT_BRACE); }
#line 305 "<stdout>"
yy12:
	++YYCURSOR;
#line 150 "jx_json_scan.re"
	{ RET(JX_JSON_CLOSE_RECT_BRACE); }
#line 310 "<stdout>"
yy14:
	++YYCURSOR;
#line 152 "jx_json_scan.re"
	{ RET(JX_JSON_OPEN_CURLY_BRACE); }
#line 315 "<stdout>"
yy16:
	++YYCURSOR;
#line 153 "jx_json_scan.re"
	{ RET(JX_JSON_CLOSE_CURLY_BRACE); }
#line 320 "<stdout>"
yy18:
	++YYCURSOR;
#line 155 "jx_json_scan.re"
	{ RET(JX_JSON_COMMA); }
#line 325 "<stdout>"
yy20:
	++YYCURSOR;
#line 156 "jx_json_scan.re"
	{ RET(JX_JSON_COLON); }
#line 330 "<stdout>"
yy22:
	++YYCURSOR;
	switch((yych = *YYCURSOR)) {
	case 'r':	goto yy49;
	default:	goto yy39;
	}
yy23:
#line 161 "jx_json_scan.re"
	{ RET(JX_JSON_IDENT); }
#line 340 "<stdout>"
yy24:
	yych = *++YYCURSOR;
	switch(yych) {
	case 'a':	goto yy44;
	default:	goto yy39;
	}
yy25:
	yych = *++YYCURSOR;
	switch(yych) {
	case 'u':	goto yy40;
	default:	goto yy39;
	}
yy26:
	yych = *++YYCURSOR;
	goto yy39;
yy27:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy37;
yy28:
#line 165 "jx_json_scan.re"
	{ goto std; }
#line 363 "<stdout>"
yy29:
	++YYCURSOR;
#line 167 "jx_json_scan.re"
	{ 
      if(cursor == s->eof) RET(JX_JSON_EOI);
    }
#line 370 "<stdout>"
yy31:
	++YYCURSOR;
#line 171 "jx_json_scan.re"
	{ goto comment; }
#line 375 "<stdout>"
yy33:
	++YYCURSOR;
#line 173 "jx_json_scan.re"
	{
      s->pos = cursor; s->line++;
      s->eof = NULL;
      goto std;
    }
#line 384 "<stdout>"
yy35:
	yych = *++YYCURSOR;
	goto yy3;
yy36:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy37:
	switch(yych) {
	case 0x09:
	case 0x0B:
	case 0x0C:
	case ' ':	goto yy36;
	default:	goto yy28;
	}
yy38:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy39:
	switch(yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy38;
	default:	goto yy23;
	}
yy40:
	yych = *++YYCURSOR;
	switch(yych) {
	case 'l':	goto yy41;
	default:	goto yy39;
	}
yy41:
	yych = *++YYCURSOR;
	switch(yych) {
	case 'l':	goto yy42;
	default:	goto yy39;
	}
yy42:
	++YYCURSOR;
	switch((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy38;
	default:	goto yy43;
	}
yy43:
#line 159 "jx_json_scan.re"
	{ RET(JX_JSON_NULL); }
#line 554 "<stdout>"
yy44:
	yych = *++YYCURSOR;
	switch(yych) {
	case 'l':	goto yy45;
	default:	goto yy39;
	}
yy45:
	yych = *++YYCURSOR;
	switch(yych) {
	case 's':	goto yy46;
	default:	goto yy39;
	}
yy46:
	yych = *++YYCURSOR;
	switch(yych) {
	case 'e':	goto yy47;
	default:	goto yy39;
	}
yy47:
	++YYCURSOR;
	switch((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy38;
	default:	goto yy48;
	}
yy48:
#line 158 "jx_json_scan.re"
	{ RET(JX_JSON_FALSE); }
#line 644 "<stdout>"
yy49:
	yych = *++YYCURSOR;
	switch(yych) {
	case 'u':	goto yy50;
	default:	goto yy39;
	}
yy50:
	yych = *++YYCURSOR;
	switch(yych) {
	case 'e':	goto yy51;
	default:	goto yy39;
	}
yy51:
	++YYCURSOR;
	switch((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy38;
	default:	goto yy52;
	}
yy52:
#line 157 "jx_json_scan.re"
	{ RET(JX_JSON_TRUE); }
#line 728 "<stdout>"
yy53:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy54:
	switch(yych) {
	case 0x00:
	case 0x0A:	goto yy55;
	case '\'':	goto yy57;
	case '\\':	goto yy56;
	default:	goto yy53;
	}
yy55:
	YYCURSOR = YYMARKER;
	switch(yyaccept) {
	case 0: 	goto yy3;
	case 1: 	goto yy5;
	case 2: 	goto yy76;
	}
yy56:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case '"':
	case '\'':
	case '?':
	case '\\':
	case 'a':
	case 'b':
	case 'f':
	case 'n':
	case 'r':
	case 't':
	case 'v':	goto yy53;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy60;
	case 'x':	goto yy59;
	default:	goto yy55;
	}
yy57:
	++YYCURSOR;
#line 147 "jx_json_scan.re"
	{ RET(JX_JSON_SCON); }
#line 779 "<stdout>"
yy59:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy62;
	default:	goto yy55;
	}
yy60:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case 0x00:
	case 0x0A:	goto yy55;
	case '\'':	goto yy57;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy60;
	case '\\':	goto yy56;
	default:	goto yy53;
	}
yy62:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case 0x00:
	case 0x0A:	goto yy55;
	case '\'':	goto yy57;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy62;
	case '\\':	goto yy56;
	default:	goto yy53;
	}
yy64:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy65:
	switch(yych) {
	case 0x00:
	case 0x0A:	goto yy55;
	case '"':	goto yy67;
	case '\\':	goto yy66;
	default:	goto yy64;
	}
yy66:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case '"':
	case '\'':
	case '?':
	case '\\':
	case 'a':
	case 'b':
	case 'f':
	case 'n':
	case 'r':
	case 't':
	case 'v':	goto yy64;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy70;
	case 'x':	goto yy69;
	default:	goto yy55;
	}
yy67:
	++YYCURSOR;
#line 145 "jx_json_scan.re"
	{ RET(JX_JSON_SCON); }
#line 904 "<stdout>"
yy69:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy72;
	default:	goto yy55;
	}
yy70:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case 0x00:
	case 0x0A:	goto yy55;
	case '"':	goto yy67;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy70;
	case '\\':	goto yy66;
	default:	goto yy64;
	}
yy72:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case 0x00:
	case 0x0A:	goto yy55;
	case '"':	goto yy67;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy72;
	case '\\':	goto yy66;
	default:	goto yy64;
	}
yy74:
	yyaccept = 2;
	YYMARKER = ++YYCURSOR;
	if((YYLIMIT - YYCURSOR) < 3) YYFILL(3);
	yych = *YYCURSOR;
	switch(yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy74;
	case 'E':
	case 'e':	goto yy77;
	case 'F':
	case 'L':
	case 'f':
	case 'l':	goto yy78;
	default:	goto yy76;
	}
yy76:
#line 143 "jx_json_scan.re"
	{ RET(JX_JSON_FCON); }
#line 1013 "<stdout>"
yy77:
	yych = *++YYCURSOR;
	switch(yych) {
	case '+':
	case '-':	goto yy79;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy80;
	default:	goto yy55;
	}
yy78:
	yych = *++YYCURSOR;
	goto yy76;
yy79:
	yych = *++YYCURSOR;
	switch(yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy80;
	default:	goto yy55;
	}
yy80:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy80;
	case 'F':
	case 'L':
	case 'f':
	case 'l':	goto yy78;
	default:	goto yy76;
	}
yy82:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch(yych) {
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy82;
	default:	goto yy5;
	}
yy84:
	yyaccept = 1;
	YYMARKER = ++YYCURSOR;
	if((YYLIMIT - YYCURSOR) < 4) YYFILL(4);
	yych = *YYCURSOR;
yy85:
	switch(yych) {
	case '.':	goto yy86;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy84;
	case 'E':
	case 'e':	goto yy87;
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy82;
	default:	goto yy5;
	}
yy86:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	switch(yych) {
	case 'E':
	case 'e':	goto yy93;
	default:	goto yy92;
	}
yy87:
